# rust_opcua_server

./: .gitignore  Cargo.toml  server.conf
src/: main.rs
