[package]
name = "rust_opcua_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pico-args = "0.5"
openssl = "0.10"
chrono = "0.4"
log = "0.4"
opcua = { version = "0.11", features = ["server", "console-logging"] }